--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,10 +17,22 @@ tqdm = "^4.64.1"
 tensorflow-text = "^2.9.0"
 aqtp = "^0.0.10"
 einops = "^0.4.1"
+jax2torch = "^0.0.7"
 
 [tool.poetry.dev-dependencies]
 black = "^22.8.0"
+ipykernel = "^6.15.3"
+ipywidgets = "^8.0.2"
+pytest = "^7.1.3"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.pytest.ini_options]
+minversion = "6.0"
+norecursedirs = ".venv __pycache__ .git .pytest_cache"
+testpaths = [
+    "lit/lit.py",
+]
+python_files = "*.py"
