--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,12 +18,18 @@ tensorflow-text = "^2.9.0"
 aqtp = "^0.0.10"
 einops = "^0.4.1"
 jax2torch = "^0.0.7"
+ivy-core = "^1.1.10"
 
 [tool.poetry.dev-dependencies]
 black = "^22.8.0"
 ipykernel = "^6.15.3"
 ipywidgets = "^8.0.2"
 pytest = "^7.1.3"
+onnxruntime = "^1.12.1"
+tf2onnx = "^1.12.0"
+onnx2torch = "^1.5.2"
+onnx2pytorch = "^0.4.1"
+onnx-pytorch = "^0.1.5"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
